--- a/back_end/.env
+++ b/back_end/.env
@@ -1,6 +1,8 @@
 MONGODB_URL='mongodb+srv://HallaGharTeamRo:Odk6KgcUHRk5ARGg@cluster0.cvusel8.mongodb.net'
+MONGODB_URL2='mongodb://localhost:27017/everything'
 
 JWT_SECRET='secret#text'
+REFRESH_SECRET='hello@@'
 NODE_ENV='development'
 
 SMTP_USER="hallaghar3@gmail.com"
